upload xarray applu_ufunc example

--- a/Svenja/xarray_apply_ufunc.ipynb
+++ b/Svenja/xarray_apply_ufunc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe9cd0f1",
+   "id": "8fbc8d47",
    "metadata": {},
    "source": [
     "# Demonstration of xarray apply_ufunc  \n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3566206c",
+   "id": "21393a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
     "\n",
     "\n",
     "# load dataset\n",
-    "woa = xr.open_dataset('~/woa_example_data.nc')"
+    "woa = xr.open_dataset('./data/woa_example_data.nc')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4d0cb693",
+   "id": "80f3b056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "94e7b29f",
+   "id": "3fae4fc5",
    "metadata": {},
    "outputs": [],
    "source": [
