--- a/Hendrik/Section_Extraction.ipynb
+++ b/Hendrik/Section_Extraction.ipynb
@@ -8,9 +8,9 @@
    "outputs": [],
    "source": [
     "# import necessary libraries\n",
-    "import numpy as np # library for numerical computing with arrays\n",
-    "import xarray as xr # library for working with labeled multidimensional arrays\n",
-    "import math # library for common math functions\n",
+    "import numpy as np \n",
+    "import xarray as xr \n",
+    "import math \n",
     "from math import radians, cos, sin, asin, sqrt\n",
     "\n",
     "def find_nearest(array, value):\n",
@@ -86,14 +86,10 @@
     "        latitudes = np.linspace(lat1, lat2, dist_max*2)\n",
     "        longitudes = (lon2 - lon1)/(lat2 - lat1)*(latitudes - lat1) + lon1\n",
     "\n",
-    "    # x_idx = []\n",
-    "    # y_idx = []\n",
     "    indices = []\n",
     "    \n",
     "    for i in range(dist_max*2):\n",
     "        dummy = find_nearest(f(lon,lat,longitudes[i],latitudes[i]).astype(float),0)[1]\n",
-    "        # x_idx.append(dummy[1])\n",
-    "        # y_idx.append(dummy[0])\n",
     "        indices.append((dummy[1],dummy[0]))\n",
     "    indices = unique(indices)\n",
     "    x_idx = [x[0] for x in indices]\n",
@@ -109,6 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load dataset\n",
     "grid = xr.open_dataset('/glade/work/fredc/metric/grid/POP_tx0.1v3_grid.nc',\n",
     "                         chunks={'nlon':50,'nlat':50})\n",
     "\n",
@@ -122,6 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# start and end points of section\n",
+    "# for broken line, you need to combine multiple straight sections on your own\n",
+    "\n",
     "lat_min_West = -45\n",
     "lat_max_West = -33\n",
     "lon_min_West = 3\n",
@@ -140,6 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# call function\n",
     "x_idx_West,y_idx_West,latitudes,longitudes = section_indices(mask,(lat_min_West,lon_min_West),(lat_max_West,lon_max_West))\n",
     "x_idx_Northwest,y_idx_Northwest,latitudes,longitudes = section_indices(mask,(lat_min_Northwest,lon_min_Northwest),(lat_max_Northwest,lon_max_Northwest))"
    ]
@@ -176,13 +177,44 @@
     "plt.plot(x_idx_West,y_idx_West)\n",
     "plt.plot(x_idx_Northwest,y_idx_Northwest)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60e7a6b3-33d6-4e18-ad29-5d3007d3bcc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine section indices\n",
+    "x_good_hope = x_idx_West + x_idx_Northwest\n",
+    "y_good_hope = y_idx_West + y_idx_Northwest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f8ada6-d7cf-41db-a25c-8b168034f184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select points on section in xarray Dataset (needs to be dataarrays with new dimension)\n",
+    "mask.isel(nlon=xr.DataArray(x_good_hope,dims='GH'),nlat=xr.DataArray(y_good_hope,dims='GH'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bbf2a11-fec1-4a0f-b800-455f3078e18f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:miniconda3-jlab]",
+   "display_name": "Python [conda env:xesmf_env]",
    "language": "python",
-   "name": "conda-env-miniconda3-jlab-py"
+   "name": "conda-env-xesmf_env-py"
   },
   "language_info": {
    "codemirror_mode": {
