--- a/theo/detrend.ipynb
+++ b/theo/detrend.ipynb
@@ -12,48 +12,54 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "sns.set()\n",
+    "\n",
     "\n",
     "######## Functions for detrending xr.DataArrays #############\n",
     "def get_linear_fit(data, dim=\"time\"):\n",
     "    \"\"\"Remove linear trend from xr.DataArray along specified dimensions\"\"\"\n",
-    "    \n",
+    "\n",
     "    ## Get coefficients of linear fit\n",
     "    p = data.polyfit(dim=dim, deg=1)\n",
-    "    \n",
+    "\n",
     "    ## Compute linear fit\n",
     "    fit = xr.polyval(data[dim], p[\"polyfit_coefficients\"])\n",
-    "    \n",
+    "\n",
     "    return fit\n",
+    "\n",
     "\n",
     "def get_linear_fit_with_cycle(data):\n",
     "    \"\"\"compute linear trend for each month separately\"\"\"\n",
     "    linear_fit = data.groupby(\"time.month\").map(get_linear_fit)\n",
     "    return linear_fit\n",
     "\n",
+    "\n",
     "############################################################\n",
+    "\n",
     "\n",
     "def make_plot(data, data_fit, data_anom):\n",
     "    \"\"\"Plot results of detrending\"\"\"\n",
-    "    fig,[ax,ax1] = plt.subplots(1,2, figsize=(8,3.5))\n",
+    "    fig, [ax, ax1] = plt.subplots(1, 2, figsize=(8, 3.5))\n",
     "\n",
     "    # plot y=0 line\n",
-    "    ax.axhline(0,c=\"k\", lw=1)\n",
-    "    ax1.axhline(0,c=\"k\",lw=1)\n",
+    "    ax.axhline(0, c=\"k\", lw=1)\n",
+    "    ax1.axhline(0, c=\"k\", lw=1)\n",
     "\n",
     "    ## Plot data\n",
     "    for i in np.arange(len(data.x)):\n",
-    "        label = r\"$x=$\"+f\"{data.x.isel(x=i).values.item()}\"\n",
+    "        label = r\"$x=$\" + f\"{data.x.isel(x=i).values.item()}\"\n",
     "\n",
     "        ## plot data\n",
-    "        data_plot = ax.plot(data.time, data.isel(x=i), label=label, alpha=.5)\n",
+    "        data_plot = ax.plot(data.time, data.isel(x=i), label=label, alpha=0.5)\n",
     "\n",
     "        ## plot best linear fit\n",
-    "        fit_plot = ax.plot(data.time, data_fit.isel(x=i), c=data_plot[0].get_color(), ls=\"--\", lw=1)\n",
+    "        fit_plot = ax.plot(\n",
+    "            data.time, data_fit.isel(x=i), c=data_plot[0].get_color(), ls=\"--\", lw=1\n",
+    "        )\n",
     "\n",
     "        ## Plot anomaly\n",
     "        anom_plot = ax1.plot(data.time, data_anom.isel(x=i), label=label)\n",
-    "\n",
     "\n",
     "    # annotate graphs\n",
     "    ax.set_xticks(ticks=ax.get_xticks(), labels=ax.get_xticklabels(), rotation=45)\n",
@@ -69,41 +75,42 @@
     "\n",
     "    return fig, [ax, ax1]\n",
     "\n",
+    "\n",
     "def make_random_data(nyears=4, nx=3):\n",
     "    \"\"\"\n",
-    "    Create synthetic data with seasonal cycle and linear trend. \n",
+    "    Create synthetic data with seasonal cycle and linear trend.\n",
     "    -'nyears' is the number of years\n",
     "    -'nx' is the number of gridpoints\n",
     "    Returns xr.DataArray\n",
     "    \"\"\"\n",
     "\n",
     "    ## create space and time dimensions\n",
-    "    t = pd.date_range(start=\"1980-01-01\", freq=\"1M\", periods=12*nyears)\n",
+    "    t = pd.date_range(start=\"1980-01-01\", freq=\"1M\", periods=12 * nyears)\n",
     "    year = np.array(t.year).astype(float)\n",
     "    month = np.array(t.month).astype(float)\n",
-    "    x = np.linspace(0,180,nx)\n",
+    "    x = np.linspace(0, 180, nx)\n",
     "\n",
     "    ## slope and intercept of data at each gridpoint\n",
-    "    m = .05*np.random.randn(*x.shape)\n",
+    "    m = 0.05 * np.random.randn(*x.shape)\n",
     "    b = np.random.randn(*x.shape)\n",
     "\n",
     "    ## seasonal cycle\n",
-    "    cycle = np.cos( month / 12 * (2*np.pi) )\n",
+    "    cycle = np.cos(month / 12 * (2 * np.pi))\n",
     "\n",
     "    ## create synthetic data\n",
     "    # first, linear trend\n",
     "    months_elapsed = np.arange(len(t))\n",
-    "    data = (m[None,:] * months_elapsed[:,None]) + b[None,:]\n",
+    "    data = (m[None, :] * months_elapsed[:, None]) + b[None, :]\n",
     "\n",
     "    # next, add seasonal cycle\n",
-    "    data = data + cycle[:,None]\n",
+    "    data = data + cycle[:, None]\n",
     "\n",
     "    # next, add noise\n",
-    "    data = data + .5*np.random.randn(*data.shape)\n",
-    "    \n",
+    "    data = data + 0.5 * np.random.randn(*data.shape)\n",
+    "\n",
     "    # put in dataarray format\n",
-    "    data = xr.DataArray(data, coords={\"time\":t, \"x\":x}, dims=[\"time\",\"x\"])\n",
-    "    \n",
+    "    data = xr.DataArray(data, coords={\"time\": t, \"x\": x}, dims=[\"time\", \"x\"])\n",
+    "\n",
     "    return data"
    ]
   },
@@ -154,7 +161,7 @@
    ],
    "source": [
     "data_fit = get_linear_fit(data)\n",
-    "data_anom = data-data_fit\n",
+    "data_anom = data - data_fit\n",
     "fig, axs = make_plot(data, data_fit, data_anom)"
    ]
   },
@@ -185,7 +192,7 @@
    ],
    "source": [
     "data_fit = get_linear_fit_with_cycle(data)\n",
-    "data_anom = data-data_fit\n",
+    "data_anom = data - data_fit\n",
     "fig, axs = make_plot(data, data_fit, data_anom)"
    ]
   }
@@ -206,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
